--- a/themes/icarus/source/css/test.html
+++ b/themes/icarus/source/css/test.html
@@ -1,8 +1,29 @@
----
-title: changelog
-date: 2024-06-02 11:44:05
----
-
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+    <meta charset="UTF-8">
+    <title>项目进展</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+        h2 {
+            margin-top: 20px;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        li {
+            margin: 5px 0;
+        }
+        .icon {
+            margin-right: 10px;
+        }
+    </style>
+</head>
 <body>
     <h2><i class="fa-solid fa-thumbtack icon"></i>Working On:</h2>
     <ul>
@@ -20,11 +41,7 @@ date: 2024-06-02 11:44:05
         <li>性能优化</li>
         <li>更新robot.txt</li>
     </ul>
-</body>
 
----
-
-<body>
     <h2><i class="fa-solid fa-check icon"></i>Finished:</h2>
     <ul>
         <li>05.31 
@@ -75,3 +92,4 @@ date: 2024-06-02 11:44:05
         </li>
     </ul>
 </body>
+</html>
